--- a/login/theme1/theme1.tmpl
+++ b/login/theme1/theme1.tmpl
@@ -82,7 +82,7 @@
 
     <div class="text-center text-muted">
         <small>
-            <strong>Powered by <a href="https://github.com/go-hq/go-admin"
+            <strong>Powered by <a href="https://github.com/GoAdminLive/go-admin"
                                   target="_blank">GoAdmin</a></strong>
         </small>
     </div>
